@@ -1,12 +1,31 @@
 plugins {
-	id 'java-library'
+    id 'java-library'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
-dependencies {
-    implementation project(':shared')
+
+javafx {
+    version = "23"
+    modules = ['javafx.controls']
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
+}
+
+dependencies {
+    implementation project(':shared')
+    implementation 'com.mysql:mysql-connector-j:8.4.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+    implementation 'ch.qos.logback:logback-classic:1.5.8'
+    implementation 'org.mindrot:jbcrypt:0.4'
+}
+
+application {
+    mainClass = 'com.game.server.ServerMain'
+    applicationDefaultJvmArgs = [
+        '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+    ]
 }
 
 jar {
@@ -14,7 +33,6 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.game.server.ServerMain'
     }
-    // Fat JAR: include all runtime dependencies
     from {
         configurations.runtimeClasspath.collect {
             it.isDirectory() ? it : zipTree(it)
@@ -22,9 +40,3 @@ jar {
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
-
-application {
-    mainClass = 'com.game.server.ServerMain'
-}
-
-apply plugin: 'application'
